--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    background-color: #333;
+    background-color: black;
     display: flex;
 }
 
